# uqoclient

./: .gitignore  Problem.py  README.md  Response.py  UQOExceptions.py  generate_certificates.py  setup.cfg
client/: config.py  connection.py  uqo_public.key
examples/: README.md  examples.py  util.py
src/: LICENSE  UQOExceptions.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/client/: connection.py  uqo_public.key
src/examples/: examples.py  graph_coloring_example.py
src/uqoclient.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
