[metadata]
name = uqoclient
version = 0.0.1
author = Varun Seshadri
author_email = varunseshadri@tum.de
description = Enhancements for the uqoclient
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isolatedinformation/uqoclient
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src